--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,16 +1,16 @@
 {
-    "name": "lab-l1-frontend",
+    "name": "lab-l8-frontend",
+    "private": true,
     "version": "1.0.0",
-    "description": "Lab L-1: Creating a Transaction Frontend",
+    "type": "module",
+    "description": "Lab L-8: Collectible Card Creator",
     "scripts": {
         "start": "vite",
-        "build": "vite build",
+        "dev": "vite",
+        "build": "tsc && vite build",
         "preview": "vite preview",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
     "dependencies": {
         "@bsv/sdk": "^1.5.2",
         "@emotion/react": "^11.14.0",
@@ -19,13 +19,13 @@
         "@mui/material": "^5.13.6",
         "@mui/styled-engine": "^6.4.8",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "uuid": "^11.1.0"
     },
     "devDependencies": {
-        "@types/node": "^22.15.3",
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.0",
-        "@vitejs/plugin-react": "^4.0.0",
+        "@vitejs/plugin-react": "^4.7.0",
         "typescript": "^5.0.0",
         "vite": "^4.0.0"
     }
