Initial import from lab-l8 -> metawattgc; rebrand packages and HTML; add EnergyTag TypeScript types.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "lab-l8-frontend",
+    "name": "metawattgc-frontend",
     "private": true,
     "version": "1.0.0",
     "type": "module",
-    "description": "Lab L-8: Collectible Card Creator",
+    "description": "MetawattGC: EnergyTag Granular Certificates UI",
     "scripts": {
         "start": "vite",
         "dev": "vite",
